<resources>
    <string name="app_name">PedidoComida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnPedido">Nuevo pedido</string>
    <string name="txtTitulo">Selecciona la comida que deseas:</string>
    <string name="btnSiguienteExtras">Siguiente</string>
    <string name="Extra">Agrega un extra</string>
    <string name="btnExtraNext">Siguiente</string>
    <string name="btnExtraBack">Atras</string>
    <string name="Pizza">Pizza</string>
    <string name="Ensalada">Ensalada</string>
    <string name="Hamburguesa">Hamburguesa</string>
    <string name="Postre">Postre</string>
    <string name="Papa">Papa</string>
    <string name="Bebida">Bebida</string>
    <string name="Proceso">Proceso de seleccion</string>
    <string name="txtPedidoCompleto">Pedido Completo</string>
    <string name="btnEdit">Editar</string>
    <string name="btnConfirm">Confirmar</string>
</resources>